--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ body {
 }
 
 .nav-bar-list a {
-    border: solid red 5px;
+    
     margin: auto;
-    font-size: auto;
+    font-size: 2vw;
 }
 
 
